--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ charset-normalizer==3.3.2
 idna==3.4
 paho-mqtt==1.6.1
 python-dotenv==1.0.0
+python-magic==0.4.27
+python-magic-bin==0.4.14
 requests==2.31.0
 urllib3==2.1.0
